# wasm-svelte-rust

./: README.md  package-lock.json  package.json
src/: App.svelte
src/greeting/: Cargo.toml
