[package]
name = "wasm-rust-svelte-greeting"
version = "0.1.0"
authors = ["Jordan Gregory <gregory.jordan.m@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wee_alloc = "^0.4"
wasm-bindgen = "^0.2"
console_error_panic_hook = { version = "^0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "^0.3"

[profile.release]
opt-level = "s"